--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -12,7 +12,7 @@ block contenido
                     form(action="" method="POST")
                         .form-group
                             label(for="name") Nombre 
-                            input#name(type="text")(type="text", placeholder="Tu nombre", name="name" class="form-control")
+                            input#name(type="text", placeholder="Tu nombre", name="name" class="form-control")
                         .form-group
                             label(for="email") Correo Electronico 
                             input#email(type="text", placeholder="Tu email", name="email" class="form-control")
