agregado testimoniales a inicio

--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -27,9 +27,10 @@ block contenido
                         p.fecha 20 de Abril de 1990 - 27 de Abril de 1990
                         p.precio 3000 €
 
+     
     .container 
-        h2.mt-5.text-center Testimoniales 
-        
+        h2.mt-5.text-center Testimoniales
+        include ./layout/bloque_testimoniales
                                     
 
 
