--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -3,40 +3,31 @@ extends ./layout/index
 block contenido
     main.container.mt-5 
         h1.text-center.mt-5 #{pagina}
-        
-        blockquote.text-center Lee sobre nuestros clientes y sus experiencias 
-        .row.testimoniales 
-            each testimonial in testimoniales 
-                .col-md-6.col-lg-4.mb-4
-                    .card 
-                        .card-body 
-                            blockquote.blockquote 
-                            p.mb-0
-                            | #{testimonial.mensaje} 
-                        footer.blockquote-footer 
-                            | #{testimonial.nombre}                
-                    
-        .row 
 
-            .col-md-12
-                h2.d-block.w-100.text-center Agrega un testimonial
-                
+        blockquote.text-center Lee sobre nuestros clientes y sus experiencias         
+        include ./layout/bloque_testimoniales
 
-                if(errores)
-                    each error in errores
-                        .alert.col.alert-danger.text-center= error.mensaje 
+    .row 
+
+        .col-md-12
+            h2.d-block.w-100.text-center Agrega un testimonial
+            
+
+            if(errores)
+                each error in errores
+                    .alert.col.alert-danger.text-center= error.mensaje 
 
 
-            .row.justify-content-center.col
-                .col-md-8
-                    form(action="/testimoniales" method="POST")
-                        .form-group
-                            label(for="name") Nombre 
-                            input#name(type="text", placeholder="Tu nombre", name="name" class="form-control", value= name)
-                        .form-group
-                            label(for="email") Correo Electronico 
-                            input#email(type="text", placeholder="Tu email", name="email" class="form-control", value= email)
-                        .form-group
-                            label(for="mensaje") Mensaje 
-                            textarea#mensaje(name="mensaje", cols="30", rows="3", class="form-control")= mensaje
-                        input.btn.btn-success.btn-block(type="submit")
+        .row.justify-content-center.col
+            .col-md-8
+                form(action="/testimoniales" method="POST")
+                    .form-group
+                        label(for="name") Nombre 
+                        input#name(type="text", placeholder="Tu nombre", name="name" class="form-control", value= name)
+                    .form-group
+                        label(for="email") Correo Electronico 
+                        input#email(type="text", placeholder="Tu email", name="email" class="form-control", value= email)
+                    .form-group
+                        label(for="mensaje") Mensaje 
+                        textarea#mensaje(name="mensaje", cols="30", rows="3", class="form-control")= mensaje
+                    input.btn.btn-success.btn-block(type="submit")
